# TRVD_2026_404-TN_Kashper_Labs

./: .gitignore  docker-compose.yml
front/: design.md  (+3 more)
server/: .env.example  .gitignore  Cargo.toml  Dockerfile
server/migrations/: 0001_init_roles_users.sql  0002_init_catalog.sql  0003_init_orders.sql  0004_init_appointments.sql  0005_init_payments.sql  0006_init_audit_logs.sql
server/notes/: backend_development_guide.md  commands.md  lab_1.md  lab_2.md  lab_2_backend_implementation_plan.md
server/notes/lab_3/: lab_3.md
server/notes/lab_4/: lab_4.md
server/notes/lab_5/: lab_5.md
server/src/: lib.rs  main.rs  startup.rs
server/src/app/: mod.rs
server/src/app/domains/: mod.rs
server/src/app/domains/auth/: controller.rs  repository.rs  service.rs
server/src/app/domains/catalog/: controller.rs  repository.rs  service.rs
server/src/app/domains/orders/: controller.rs  repository.rs  service.rs
server/src/app/events/: domain_event.rs  event_publisher.rs  mod.rs
server/src/app/middlewares/: auth_middleware.rs  role_middleware.rs
server/src/app/redis/: client.rs  keys.rs  mod.rs  token_wl_service.rs
server/src/app/routes/: auth_routes.rs  catalog_routes.rs  health_routes.rs  mod.rs  orders_routes.rs  payments_routes.rs  reports_routes.rs  schedule_routes.rs  swagger.rs  users_routes.rs
server/src/app/utils/: jwt.rs  mod.rs  pagination.rs  qs_query.rs  request_error.rs  service_context.rs  validation.rs
server/src/constants/: mod.rs
server/src/core/: app_data.rs  config.rs  logger.rs  mod.rs  pg_connector.rs  redis_connector.rs  server.rs
(+53 files in other folders)
