[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"

tokio = { version = "1.35", features = ["full"] }
actix-web = "4.11.0"
actix-cors = "0.7.1"

tracing = "0.1.41"
tracing-actix-web = "0.7.19"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json", "registry"] }